# C-Introduction-to-Programming

./: CMakeLists.txt  README.md
Week 01/: Problem 02.c  Problem 03.c  README.md
Week 01/Solutions/: Problem 01.c
Week 02/: README.md
Week 02/Solutions/: Problem 01.c  Problem 02.c  Problem 03.c  Problem 04.c  Problem 05.c  Problem 06.c  Problem 07.c  Problem 08.c  Problem 09.c  Problem 10.c  Problem 11.c  Problem 12.c  Problem 13.c
Week 03/: README.md
